--- a/orca/templates/new_application_notice.html
+++ b/orca/templates/new_application_notice.html
@@ -20,7 +20,7 @@
         <li>Zkontrolovat vygenerovanou přihlášku, zda na ní nechybí žádná informace.</li>
         <li>Napsat do výborového chatu na signálu, že přišla nová přihláška a domluvit se tam, kdo zájemci*kyni zavolá.
         <li>Zájemci*kyni je třeba zavolat do dvou týdnů od obdržení tohoto emailu a zároveň před dalším výborovým setkáním, abychom o ní*něm mohli hlasovat.</li>
-        <li>Více informací k celému procesu najdeš v tomto manuálu (pokud jsi člen*ka výboru, měl*a bys k němu mít přístup): <a href="https://docs.google.com/document/d/1pmkk1rnAZ5WVJEv_5Q0Yrw_XnEFSYoa9G-sU5N1Zzqg/edit?usp=share_link">https://docs.google.com/document/d/1pmkk1rnAZ5WVJEv_5Q0Yrw_XnEFSYoa9G-sU5N1Zzqg/edit?usp=share_link</a></li>
+        <li>Více informací k celému procesu najdeš v tomto manuálu (pokud jsi člen*ka výboru, měl*a bys k němu mít přístup): <a href="https://docs.google.com/document/d/1pmkk1rnAZ5WVJEv_5Q0Yrw_XnEFSYoa9G-sU5N1Zzqg/edit?usp=share_link">google docs</a></li>
       </ul>
     </p>
 
@@ -32,7 +32,7 @@
         <li>Check the generated application to ensure that no information is missing.</li>
         <li>Write in the committee chat on Signal that a new application has been received and discuss who will call the applicant.</li>
         <li>Call the applicant within two weeks of receiving this email and before the next committee meeting, so that we can vote on it.</li>
-        <li>You can find more information about the entire process in this manual (if you are a committee member, you should have access to it): <a href="https://docs.google.com/document/d/1pmkk1rnAZ5WVJEv_5Q0Yrw_XnEFSYoa9G-sU5N1Zzqg/edit?usp=share_link">https://docs.google.com/document/d/1pmkk1rnAZ5WVJEv_5Q0Yrw_XnEFSYoa9G-sU5N1Zzqg/edit?usp=share_link</a></li>
+        <li>You can find more information about the entire process in this manual (if you are a committee member, you should have access to it): <a href="https://docs.google.com/document/d/1pmkk1rnAZ5WVJEv_5Q0Yrw_XnEFSYoa9G-sU5N1Zzqg/edit?usp=share_lin">google docs</a></li>
       </ul>
     </p>
   </body>
