--- a/orca/templates/email_verification/default.html
+++ b/orca/templates/email_verification/default.html
@@ -562,7 +562,7 @@
                                            <td class="mcnImageContent" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;" valign="top">
 
 
-                                             <img alt="" src="https://mcusercontent.com/0a339e256be786121e4753bee/images/37a207ce-ae5e-787a-06c8-37b24bb0e37a.png" style="max-width:800px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage" width="152.28" align="middle">
+                                             <img alt="" src="https://ictunion.cz/images/logo.png" style="max-width:800px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage" width="152.28" align="middle">
 
 
                                            </td>
