--- a/administration-panel/src/templates/index.html
+++ b/administration-panel/src/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Member's panel | ICT Union</title>
+    <title>Administration panel | ICT Union</title>
 </head>
 <body>
   <div id="app"></div>
