--- a/administration-panel/src/styles/index.css
+++ b/administration-panel/src/styles/index.css
@@ -7,3 +7,16 @@ html, body {
 #app {
     height: 100%;
 }
+
+.app-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    min-height: 100%;
+}
+
+.app-main {
+    flex-grow: 1;
+    flex-shrink: 0;
+    padding: 0 24px;
+}
