Melon Head: Spike dashboard page (#95)
Implements basic dashboard (as homepage) and 404 page.

--- a/melon-head/src/App/styles.module.scss
+++ b/melon-head/src/App/styles.module.scss
@@ -12,8 +12,8 @@
 }
 
 .main-container {
-    display: grid;
     flex: 100% 1 1;
     grid-area: main;
-    grid-template-areas: 'header' 'body' 'footer';
+    display: flex;
+    flex-direction: column;
 }
