--- a/melon-head/src/Icons/styles.module.scss
+++ b/melon-head/src/Icons/styles.module.scss
@@ -90,7 +90,7 @@
     }
 }
 
-.loading {
+@mixin loading($color) {
   display: inline-block;
   position: relative;
   width: 80px;
@@ -102,24 +102,28 @@
       width: 13px;
       height: 13px;
       border-radius: 50%;
-      background: #fff;
+      background: $color;
       animation-timing-function: cubic-bezier(0, 1, 1, 0);
-  }
-   div:nth-child(1) {
-      left: 8px;
-      animation: lds-ellipsis1 0.6s infinite;
-  }
-  div:nth-child(2) {
-      left: 8px;
-      animation: lds-ellipsis2 0.6s infinite;
-  }
-  div:nth-child(3) {
-      left: 32px;
-      animation: lds-ellipsis2 0.6s infinite;
-  }
-  div:nth-child(4) {
-      left: 56px;
-      animation: lds-ellipsis3 0.6s infinite;
+
+      &:nth-child(1) {
+          left: 8px;
+          animation: lds-ellipsis1 0.6s infinite;
+      }
+
+      &:nth-child(2) {
+          left: 8px;
+          animation: lds-ellipsis2 0.6s infinite;
+      }
+
+      &:nth-child(3) {
+          left: 32px;
+          animation: lds-ellipsis2 0.6s infinite;
+      }
+
+      &:nth-child(4) {
+          left: 56px;
+          animation: lds-ellipsis3 0.6s infinite;
+      }
   }
 
   @keyframes lds-ellipsis1 {
@@ -149,4 +153,12 @@
           transform: translate(24px, 0);
       }
   }
+}
+
+.loading-light {
+    @include loading(white);
+}
+
+.loading-dark {
+    @include loading(#211D22);
 }
