--- a/melon-head/src/App/styles.module.scss
+++ b/melon-head/src/App/styles.module.scss
@@ -2,18 +2,12 @@
     display: flex;
     align-items: stretch;
     height: 100%;
-}
-
-.app-nav {
-    grid-area: nav;
-    flex: 250px 0 0;
-    background: #211D22;
-    box-shadow: -6px 0 6px 0 rgba(0,0,0,0.3) inset;
+    overflow: hidden;
 }
 
 .main-container {
     flex: 100% 1 1;
-    grid-area: main;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
