--- a/melon-head/src/Page/styles.module.scss
+++ b/melon-head/src/Page/styles.module.scss
@@ -1,10 +1,21 @@
 .root {
     flex: 100% 1 1;
     padding: 32px 24px;
-
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    overflow: auto;
+    max-width: 100%;
 }
 
 .title {
     font-size: 32px;
     font-weight: 500;
+}
+
+.loading {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
