--- a/melon-head/src/Profile/styles.module.scss
+++ b/melon-head/src/Profile/styles.module.scss
@@ -1,6 +1,8 @@
+@import '../variables';
+
 .root {
     position: fixed;
-    background: rgba(black, 0.6);
+    background: rgba($primary, 0.6);
     top: 0;
     right: 0;
     bottom: 0;
@@ -20,7 +22,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 12px;
-    border-bottom: 1px solid rgba(#211D22, 0.2);
+    border-bottom: 1px solid rgba($primary, 0.2);
     height: 64px;
 }
 
