--- a/melon-head/static/css/main.css
+++ b/melon-head/static/css/main.css
@@ -136,6 +136,10 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     font-weight: normal;
 }
 
+button, input {
+    font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
+}
+
 ol, ul {
     list-style: none;
 }
