Switch melon head from parcel to webpack (#99)
Parcel is full of weird & annoying issued so it will be better to use
webpack.

--- a/melon-head/src/Link/styles.module.scss
+++ b/melon-head/src/Link/styles.module.scss
@@ -14,6 +14,7 @@
     color: $ternary;
     text-decoration: underline;
     cursor: pointer;
+    font-weight: 600;
 
     &:hover > span {
         display: block;
