--- a/melon-head/src/Chip/styles.module.scss
+++ b/melon-head/src/Chip/styles.module.scss
@@ -1,7 +1,5 @@
 @use 'sass:math';
 
-@import '../variables';
-
 .count {
     $size: 18px;
 
@@ -9,9 +7,10 @@
     justify-content: center;
     align-items: center;
     font-size: 12px;
-    background: rgba($secondary, .1);
-    border: 1px solid $secondary;
-    color: $primary;
+    background: rgba(var(--rgb_color3), .1);
+    border: 1px solid var(--color3);
+    color: var(--color1);
+    padding: 0 4px;
     height: $size;
     min-width: $size;
     border-radius: math.div($size, 2);
