--- a/melon-head/src/Dashboard/styles.module.scss
+++ b/melon-head/src/Dashboard/styles.module.scss
@@ -1,5 +1,3 @@
-@import '../variables';
-
 .stats-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -14,17 +12,17 @@
 
 .row-table-wrapper {
     position: relative;
-    border: 4px solid $ternary;
+    border: 4px solid var(--color4);
     overflow: hidden;
 }
 
 .row-table-title {
-   background: $ternary;
+   background: var(--color4);
    font-size: 16px;
    line-height: 1.5em;
    font-weight: 600;
    padding: 2px 12px 6px;
-   color: white;
+   color: car(--color2);
 }
 
 .row-table-table {
@@ -37,7 +35,7 @@
 
     td {
         padding: 12px;
-        border-top: 1px solid rgba($primary, .4);
+        border-top: 1px solid rgba(var(--rgb_color1), .4);
 
         &:first-child {
             font-weight: 600;
@@ -59,7 +57,7 @@
 
 .row-table-loading {
     @include overlay;
-    background: rgba(white, 0.6);
+    background: rgba(var(--rgb_color2), 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,6 +65,6 @@
 
 .row-table-error {
     @include overlay;
-    background: $quaternary;
+    background: var(--color7);
     padding: 12px;
 }
