--- a/melon-head/src/DataTable/styles.module.scss
+++ b/melon-head/src/DataTable/styles.module.scss
@@ -1,11 +1,9 @@
-@import '../variables';
-
-$border-color: rgba($primary, 0.3);
+$border-color: rgba(var(--rgb_color1), 0.3);
 
 .root {
     border: 1px solid $border-color;
     border-radius: 4px;
-    background: white;
+    background: var(--color2);
 }
 
 .scroll-container {
@@ -20,7 +18,7 @@ $border-color: rgba($primary, 0.3);
     grid-template-columns: var(--grid-template-columns);
     font-size: 15px;
     min-width: fit-content;
-    background: rgba($border-color, .05);
+    background: rgba(var(--rgb_color1), .05);
 }
 
 .tr {
@@ -33,7 +31,7 @@ $border-color: rgba($primary, 0.3);
     align-items: center;
 
     &:hover {
-        background: rgba($ternary, .1);
+        background: rgba(var(--rgb_color4), .1);
     }
 }
 
