--- a/melon-head/src/Link/styles.module.scss
+++ b/melon-head/src/Link/styles.module.scss
@@ -1,17 +1,15 @@
-@import '../variables';
-
 .email {
-    color: $ternary;
+    color: var(--color4);
 }
 
 .tel {
-    color: $ternary;
+    color: var(--color4);
 }
 
 .uuid {
     position: relative;
     font-size: 12px;
-    color: $ternary;
+    color: var(--color4);
     text-decoration: underline;
     cursor: pointer;
     font-weight: 600;
@@ -24,12 +22,13 @@
 .uuid-full {
     position: absolute;
     display: none;
-    top: -6px;
+    top: -7px;
     left: -12px;
-    background: rgba(white, 0.5);
     backdrop-filter: blur(6px);
+    background-color: rgba(var(--rgb_color2), .5);
     white-space: nowrap;
     padding: 6px 12px;
     border-radius: 6px;
-    box-shadow: 2px 1px 5px 1px rgba(black, .2);
+    box-shadow: 1px 1px 5px 1px rgba(var(--rgb_color1), .2);
+    text-decoration: underline;
 }
