--- a/melon-head/src/Profile/styles.module.scss
+++ b/melon-head/src/Profile/styles.module.scss
@@ -1,8 +1,6 @@
-@import '../variables';
-
 .root {
     position: fixed;
-    background: rgba($primary, 0.6);
+    background: rgba(var(--rgb_color1), 0.6);
     top: 0;
     right: 0;
     bottom: 0;
@@ -12,7 +10,7 @@
 }
 
 .side-pane {
-    background: white;
+    background: var(--color2);
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
 }
@@ -22,14 +20,14 @@
     justify-content: space-between;
     align-items: center;
     padding: 12px;
-    border-bottom: 1px solid rgba($primary, 0.2);
+    border-bottom: 1px solid rgba(var(--rgb_color1), 0.2);
     height: 64px;
 }
 
 .nav-title {
     font-size: 16px;
     font-weight: 600;
-    color: #211D22;
+    color: var(--color1);
 }
 
 .close-btn {
@@ -45,7 +43,7 @@
     transition: background .2s ease-in-out;
 
     &:hover {
-        background: rgba(#211D22, 0.2);
+        background: rgba(var(--color1), 0.2);
     }
 }
 
@@ -57,7 +55,7 @@
     }
 
     a {
-        color: #211D22;
+        color: var(--color1);
         text-decoration: none;
 
         &:hover {
@@ -70,13 +68,13 @@ li.nav-divider {
     padding: 0;
     margin: 0;
     line-height: 0;
-    border-bottom: 1px solid rgba(#211D22, 0.2);
+    border-bottom: 1px solid rgba(var(--rgb_color1), 0.2);
 }
 
 .sign-out-btn {
-    border: 1px solid #EF562E;
-    background: rgba(#EF562E, .1);
-    color: #EF562E;
+    border: 1px solid var(--color7);
+    background: rgba(var(--color7), .1);
+    color: var(--color7);
     font-weight: 500;
     letter-spacing: 0.1em;
     padding: 6px 12px;
@@ -86,8 +84,8 @@ li.nav-divider {
     margin-top: 6px;
 
     &:hover {
-        background: #EF562E;
-        color: white;
+        background: var(--color7);
+        color: var(--color2);
     }
 }
 
@@ -96,8 +94,8 @@ li.nav-divider {
 }
 
 .profile-detail {
-    background: #211D22;
-    color: white;
+    background: var(--color1);
+    color: var(--color2);
     padding: 12px;
     display: flex;
     flex-direction: column;
@@ -135,6 +133,6 @@ li.nav-divider {
 
 .role {
     padding: 2px 4px;
-    border: 1px solid rgba(white, .4);
+    border: 1px solid rgba(var(--rgb_color2), .4);
     border-radius: 1px;
 }
