--- a/melon-head/static/css/main.css
+++ b/melon-head/static/css/main.css
@@ -138,6 +138,7 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 
 button, input {
     font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
+    color: inherit;
 }
 
 ol, ul {
