--- a/melon-head/src/Widgets/RowBasedTable/styles.module.scss
+++ b/melon-head/src/Widgets/RowBasedTable/styles.module.scss
@@ -1,28 +1,19 @@
-.stats-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 12px;
+$border-color: rgba(var(--rgb_color1), 0.2);
+$bg-color: rgba(var(--rgb_color1), 0.1);
 
-    @media screen and (max-width: 1220px) {
-        & {
-            grid-template-columns: 1fr;
-        }
-    }
-}
-
-.row-table-wrapper {
+.root {
     position: relative;
-    border: 4px solid var(--color4);
+    border: 1px solid $border-color;
     overflow: hidden;
 }
 
 .row-table-title {
-   background: var(--color4);
-   font-size: 16px;
-   line-height: 1.5em;
-   font-weight: 600;
-   padding: 2px 12px 6px;
-   color: car(--color2);
+    background: $bg-color;
+    border-bottom: 1px solid $border-color;
+    font-size: 16px;
+    line-height: 1.5em;
+    font-weight: 600;
+    padding: 6px 12px;
 }
 
 .row-table-table {
@@ -35,7 +26,7 @@
 
     td {
         padding: 12px;
-        border-top: 1px solid rgba(var(--rgb_color1), .4);
+        border-top: 4px solid $bg-color;
 
         &:first-child {
             font-weight: 600;
