--- a/melon-head/src/App/ApplicationDetail/styles.module.scss
+++ b/melon-head/src/App/ApplicationDetail/styles.module.scss
@@ -1,7 +1,3 @@
-.root {
-
-}
-
 .title {
     display: flex;
     align-items: center;
@@ -9,17 +5,23 @@
     font-size: 24px;
     margin-bottom: 6px;
     font-weight: 700;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .title-id {
     font-family: monospace;
     color: var(--color4);
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .status {
     display: flex;
     align-items: center;
-    gap: 12px;
+    gap: 6px;
     font-weight: 600;
     font-size: 16px;
 }
