--- a/melon-head/src/Widgets/RowBasedTable/styles.module.scss
+++ b/melon-head/src/Widgets/RowBasedTable/styles.module.scss
@@ -26,7 +26,7 @@ $bg-color: rgba(var(--rgb_color1), 0.1);
 
     td {
         padding: 12px;
-        border-top: 4px solid $bg-color;
+        border-top: 1px solid $border-color;
 
         &:first-child {
             font-weight: 600;
