--- a/melon-head/src/App/AppNavigation/styles.module.scss
+++ b/melon-head/src/App/AppNavigation/styles.module.scss
@@ -32,6 +32,10 @@
         letter-spacing: 0.2px;
         font-size: 16px;
         align-items: center;
+
+        &:hover {
+            color: var(--color2);
+        }
     }
 
     &:hover {
