--- a/melon-head/src/App/ApplicationDetail/styles.module.scss
+++ b/melon-head/src/App/ApplicationDetail/styles.module.scss
@@ -142,3 +142,25 @@
         text-align: right;
     }
 }
+
+.member-number-form {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 12px;
+    background: rgba(var(--rgb_color4), .1);
+    border: 1px solid var(--color4);
+}
+
+.member-number-field {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    font-weight: 600;
+}
+
+.member-number-auto {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
