--- a/melon-head/src/App/Profile/styles.module.scss
+++ b/melon-head/src/App/Profile/styles.module.scss
@@ -71,24 +71,6 @@ li.nav-divider {
     border-bottom: 1px solid rgba(var(--rgb_color1), 0.2);
 }
 
-.sign-out-btn {
-    border: 1px solid var(--color7);
-    background: rgba(var(--color7), .1);
-    color: var(--color7);
-    font-weight: 500;
-    letter-spacing: 0.1em;
-    padding: 6px 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background .2s ease-in-out;
-    margin-top: 6px;
-
-    &:hover {
-        background: var(--color7);
-        color: var(--color2);
-    }
-}
-
 .centered-li {
     justify-content: center;
 }
@@ -131,8 +113,15 @@ li.nav-divider {
     justify-content: center;
 }
 
+.roles {
+    display: flex;
+    gap: 6px;
+    flex-wrap: wrap;
+}
+
 .role {
     padding: 2px 4px;
     border: 1px solid rgba(var(--rgb_color2), .4);
     border-radius: 1px;
+    white-space: nowrap;
 }
