--- a/melon-head/src/Widgets/Tabbed/styles.module.scss
+++ b/melon-head/src/Widgets/Tabbed/styles.module.scss
@@ -41,6 +41,16 @@ $border-color: rgba(var(--rgb_color1), 0.5);
     }
 }
 
+.tab-spacer {
+    display: flex;
+    padding: 8px 12px;
+
+    &::before {
+        content: '';
+        border-left: 1px solid rgba(var(--rgb_color1), 0.4)
+    }
+}
+
 .active-tab {
     @include tab;
     background: white;
