--- a/melon-head/src/App/AppNavigation/styles.module.scss
+++ b/melon-head/src/App/AppNavigation/styles.module.scss
@@ -1,7 +1,5 @@
 .root {
-    flex: 250px 0 0;
-    background: var(--color3);
-    box-shadow: -6px 0 6px 0 rgba(var(--rgb_color1), 0.3) inset;
+    flex: 200px 0 0;
 }
 
 .loading {
@@ -14,38 +12,42 @@
 .nav-list {
     display: flex;
     flex-direction: column;
+    gap: 6px;
     margin-top: 64px;
-    border-top: 1px solid rgba(var(--rgb_color2), .2);
-    padding: 12px 0;
+    padding: 12px 6px 12px 0;
 }
 
 .nav-item {
-    padding: 12px 24px;
+    padding: 0 6px;
     cursor: pointer;
-    transition: background .2s ease-in-out;
 
     a {
         display: flex;
         gap: 12px;
+        padding: 12px 12px;
         color: var(--color2);
         font-weight: 600;
         letter-spacing: 0.2px;
         font-size: 16px;
         align-items: center;
+        border-radius: 6px;
+        transition: background .2s ease-in-out;
 
         &:hover {
-            color: var(--color2);
+            background: rgba(var(--rgb_color2), .1);
         }
     }
+}
 
-    &:hover {
+.nav-item-open {
+    a {
         background: rgba(var(--rgb_color2), .1);
     }
 }
 
 .separator {
     border-bottom: 1px solid rgba(var(--rgb_color2), .2);
-    margin: 12px 0;
+    margin: 6px 0;
 }
 
 .nav-icon {
