--- a/melon-head/src/App/Dashboard/styles.module.scss
+++ b/melon-head/src/App/Dashboard/styles.module.scss
@@ -1,11 +1,34 @@
 .stats-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
     gap: 12px;
 
     @media screen and (max-width: 1220px) {
         & {
-            grid-template-columns: 1fr;
+            flex-direction: column;
         }
     }
+}
+
+.grid-item {
+    flex: 33.3% 1 1;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.page-link {
+    font-weight: 600;
+    padding: 2px 6px;
+    margin: 0 -6px;
+    align-self: flex-start;
+    border-radius: 3px;
+    transition: background 0.2s ease-in-out;
+
+    &:hover {
+        background: #DCEFF2;
+    }
+}
+
+.item-title {
+    font-weight: 700;
 }
