--- a/melon-head/src/App/ErrorPage/styles.module.scss
+++ b/melon-head/src/App/ErrorPage/styles.module.scss
@@ -1,9 +1,16 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 .title {
     display: flex;
     font-weight: 800;
     font-size: 48px;
     flex-direction: column;
     color: var(--color1);
+    gap: 24px;
 }
 
 .status-code {
