--- a/melon-head/src/App/Profile/styles.module.scss
+++ b/melon-head/src/App/Profile/styles.module.scss
@@ -7,12 +7,12 @@
     left: 0;
     display: grid;
     grid-template-columns: auto 275px;
+    backdrop-filter: blur(4px);
 }
 
 .side-pane {
-    background: var(--color2);
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
@@ -22,6 +22,7 @@
     padding: 12px;
     border-bottom: 1px solid rgba(var(--rgb_color1), 0.2);
     height: 64px;
+    background: var(--color2);
 }
 
 .nav-title {
@@ -36,14 +37,14 @@
     align-items: center;
     width: 32px;
     height: 32px;
-    border-radius: 4px;
+    border-radius: 100%;
     cursor: pointer;
     background: transparent;
     border: none;
     transition: background .2s ease-in-out;
 
     &:hover {
-        background: rgba(var(--color1), 0.2);
+        background: rgba(var(--rgb_color1), 0.2);
     }
 }
 
@@ -76,7 +77,8 @@ li.nav-divider {
 }
 
 .profile-detail {
-    background: var(--color1);
+    background: linear-gradient(233deg, rgba(56, 152, 190, .5) 0%, rgba(24, 101, 157, .5) 100%);
+    backdrop-filter: blur(4px);
     color: var(--color2);
     padding: 12px;
     display: flex;
@@ -124,4 +126,12 @@ li.nav-divider {
     border: 1px solid rgba(var(--rgb_color2), .4);
     border-radius: 1px;
     white-space: nowrap;
+}
+
+.bottom {
+    background: var(--color2);
+}
+
+.footer {
+    flex-grow: 1;
 }
