--- a/melon-head/src/Widgets/Chip/styles.module.scss
+++ b/melon-head/src/Widgets/Chip/styles.module.scss
@@ -6,12 +6,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 12px;
-    background: rgba(var(--rgb_color3), .1);
-    border: 1px solid var(--color3);
-    color: var(--color1);
+    font-size: 13px;
+    background: #d7eff2;
+    border: 1px solid #30849b;
+    color: #0d3945;
     padding: 0 4px;
     height: $size;
     min-width: $size;
     border-radius: math.div($size, 2);
+}
+
+.app-status {
+    background: #d7eff2;
+    border: 1px solid #30849b;
+    padding: 0 6px;
+    border-radius: 12px;
+    font-weight: 400;
+    color: #0d3945;
+    font-size: 13px;
 }
