--- a/melon-head/src/Widgets/Tabbed/styles.module.scss
+++ b/melon-head/src/Widgets/Tabbed/styles.module.scss
@@ -1,4 +1,4 @@
-$border-color: rgba(var(--rgb_color1), 0.5);
+$border-color:  #17a6b8;
 
 .scroll-container {
     overflow-x: auto;
@@ -20,22 +20,23 @@ $border-color: rgba(var(--rgb_color1), 0.5);
     padding: 6px 14px;
     cursor: pointer;
     font-weight: 400;
-    border: 1px solid $border-color;
+    border: 0;
     letter-spacing: 0.4px;
     margin-bottom: -1px;
     border-bottom: 2px solid transparent;
+    color: #0d3945;
     align-items: baseline;
     white-space: nowrap;
 }
 
 .tab {
     @include tab;
-    background: rgba(var(--rgb_color1), .1);
+    background: #d2eaed;
     transition: background .2s ease-in-out, border-color .2s linear;
-    margin-top: 6px;
+    border-top: 8px solid var(--color2);
+    margin-bottom: 1px;
 
     &:hover {
-        background: rgba(var(--rgb_color1), .05);
         border-top: 6px solid var(--active-color, var(--color4));
         margin-top: 1px;
     }
