--- a/melon-head/src/App/Dashboard/styles.module.scss
+++ b/melon-head/src/App/Dashboard/styles.module.scss
@@ -25,7 +25,7 @@
     transition: background 0.2s ease-in-out;
 
     &:hover {
-        background: #DCEFF2;
+        background: var(--background-color);
     }
 }
 
