--- a/melon-head/src/App/ErrorPage/styles.module.scss
+++ b/melon-head/src/App/ErrorPage/styles.module.scss
@@ -26,7 +26,7 @@
 }
 
 .code {
-    background: rgba(var(--rgb_color3), .2);
+    background: var(--emphasis-dark-overlay);
     padding: 0 2px;
     font-family: monospace;
     font-style: normal;
