--- a/melon-head/src/App/ApplicationDetail/styles.module.scss
+++ b/melon-head/src/App/ApplicationDetail/styles.module.scss
@@ -16,7 +16,7 @@
     align-items: center;
 
     &:hover {
-        background: #DCEFF2;
+        background: var(--background-color);
     }
 }
 
@@ -30,7 +30,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    color: #0d3945;
 }
 
 .title-id {
@@ -57,16 +56,16 @@
     font-weight: 600;
     font-size: 16px;
     overflow: hidden;
-    background: #d7eff2;
-    color: #0d3945;
+    background: var(--background-color);
+    color: var(--color3);
 
     a {
-        color: #0d3945;
+        color: var(--color3);
     }
 }
 
 .label {
-    color: #30849b;
+    color: var(--color4);
     font-size: 12px;
     font-weight: 700;
     letter-spacing: 0.2px;
@@ -102,7 +101,7 @@
 .row-label {
     font-size: 16px;
     font-weight: 700;
-    border-bottom: 2px solid #cfe0e5;
+    border-bottom: 1px solid var(--border-color);
 }
 
 .metadata {
@@ -125,11 +124,12 @@
 }
 
 .signature {
-    background: white;
+    background: var(--color2);
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 6px;
+    border: 2px solid var(--color4);
 }
 
 .files-table {
@@ -143,7 +143,8 @@
         font-weight: 600;
 
         td {
-            background: rgba(var(--rgb_color4), .2);
+            background: var(--color4);
+            color: var(--color2);
         }
     }
 
@@ -158,7 +159,7 @@
 
     tbody {
         tr:nth-child(even) td {
-            background: rgba(var(--rgb_color4), .1);
+            background: var(--color2);
         }
     }
 
@@ -172,8 +173,12 @@
     flex-direction: column;
     gap: 12px;
     padding: 12px;
-    background: rgba(var(--rgb_color4), .1);
-    border: 1px solid var(--color4);
+    background: var(--color4);
+    color: var(--color2);
+
+    input {
+        color: var(--color0);
+    }
 }
 
 .member-number-field {
