--- a/melon-head/src/App/Profile/styles.module.scss
+++ b/melon-head/src/App/Profile/styles.module.scss
@@ -1,6 +1,6 @@
 .root {
     position: fixed;
-    background: rgba(var(--rgb_color1), 0.6);
+    background: var(--mutted-overlay);
     top: 0;
     right: 0;
     bottom: 0;
@@ -20,7 +20,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 12px;
-    border-bottom: 1px solid rgba(var(--rgb_color1), 0.2);
     height: 64px;
     background: var(--color2);
 }
@@ -44,7 +43,7 @@
     transition: background .2s ease-in-out;
 
     &:hover {
-        background: rgba(var(--rgb_color1), 0.2);
+        background: var(--emphasis-dark-overlay);
     }
 }
 
@@ -69,7 +68,7 @@ li.nav-divider {
     padding: 0;
     margin: 0;
     line-height: 0;
-    border-bottom: 1px solid rgba(var(--rgb_color1), 0.2);
+    border-bottom: 1px solid var(--separator-dark-low-emphasis);
 }
 
 .centered-li {
@@ -77,7 +76,7 @@ li.nav-divider {
 }
 
 .profile-detail {
-    background: linear-gradient(233deg, rgba(56, 152, 190, .5) 0%, rgba(24, 101, 157, .5) 100%);
+    background: var(--secondary-background);
     backdrop-filter: blur(4px);
     color: var(--color2);
     padding: 12px;
@@ -123,7 +122,7 @@ li.nav-divider {
 
 .role {
     padding: 2px 4px;
-    border: 1px solid rgba(var(--rgb_color2), .4);
+    border: 1px solid var(--separator-light-higher-emphasis);
     border-radius: 1px;
     white-space: nowrap;
 }
