--- a/melon-head/src/App/styles.module.scss
+++ b/melon-head/src/App/styles.module.scss
@@ -1,7 +1,8 @@
 $colors-light: (
+    color0: #000000,
     color1: #211d22,
     color2: #ffffff,
-    color3: #4b4848,
+    color3: #0d3945,
     color4: #109AC0,
     color5: #a63ded,
     color6: #00c49f,
@@ -34,6 +35,17 @@ $colors-light: (
 
 :root {
   @include generate_colors($colors-light);
+  --page-background: linear-gradient(233deg, rgb(35,152,168) 0%, rgb(0,192,213) 42%, rgb(35,112,168) 100%);
+  --secondary-background: linear-gradient(233deg, rgba(56, 152, 190, .5) 0%, rgba(24, 101, 157, .5) 100%);
+  --emphasis-light-overlay: rgba(var(--rgb_color2), 0.1);
+  --emphasis-dark-overlay: rgba(var(--rgb_color1), 0.2);
+  --separator-light-low-emphasis: rgba(var(--rgb_color2), 0.2);
+  --separator-light-higher-emphasis: rgba(var(--rgb_color2), 0.4);
+  --separator-dark-low-emphasis: rgba(var(--rgb_color1), 0.2);
+  --background-color: rgba(var(--rgb_color1), 0.2);
+  --mutted-overlay: rgba(var(--rgb_color1), 0.6);
+  --background-color: #d7eff2;
+  --border-color: #17a6b8;
 }
 
 .root {
@@ -41,7 +53,7 @@ $colors-light: (
     align-items: stretch;
     height: 100%;
     overflow: hidden;
-    background: linear-gradient(233deg, rgba(35,152,168,1) 0%, rgba(0,192,213,1) 42%, rgba(35,112,168,1) 100%);
+    background: var(--page-background);
     padding-left: 6px;
 }
 
