--- a/melon-head/src/Widgets/Message/styles.module.scss
+++ b/melon-head/src/Widgets/Message/styles.module.scss
@@ -8,7 +8,11 @@
 }
 
 .error {
-    @include message(color7);
+    color: var(--color1);
+    font-weight: 600;
+    padding: 6px 12px;
+    background: var(--color7);
+    border-radius: 4px;
 }
 
 .info {
