Assign current session to member by email (#120)
This implements api and UI for assigning currently logged session to
matching member by email.
This means that logged in user (with appropriate permissions) could
create an entry in members table for themselves and then use the pairing
function to pair their account with this member entry.

--- a/melon-head/src/App/styles.module.scss
+++ b/melon-head/src/App/styles.module.scss
@@ -1,3 +1,6 @@
+@use "sass:map";
+@use 'sass:color';
+
 $colors-light: (
     color0: #000000,
     color1: #211d22,
@@ -46,6 +49,8 @@ $colors-light: (
   --mutted-overlay: rgba(var(--rgb_color1), 0.6);
   --background-color: #d7eff2;
   --border-color: #17a6b8;
+  --error-color: #{map.get($colors-light, color7)};
+  --error-bgcolor: #{color.mix(map.get($colors-light, color7), map.get($colors-light, color2), $weight: 15%)};
 }
 
 .root {
