--- a/melon-head/src/Widgets/Button/styles.module.scss
+++ b/melon-head/src/Widgets/Button/styles.module.scss
@@ -6,6 +6,7 @@
     cursor: pointer;
     transition: background .2s ease-in-out;
     margin-top: 6px;
+    font-weight: 600;
 
     &:disabled, &[disabled] {
         opacity: 0.5;
@@ -33,13 +34,13 @@
 }
 
 .cta {
-    border: 1px solid var(--color6);
-    background: var(--color6);
-    color: var(--color2);
+    border: 1px solid var(--border-color);
+    background: var(--background-color);
+    color: var(--color3);
 
     &:hover {
-        background: var(--color2);
-        color: var(--color6);
+        background: var(--border-color);
+        color: var(--color2);
     }
 }
 
