--- a/melon-head/static/css/main.css
+++ b/melon-head/static/css/main.css
@@ -133,7 +133,10 @@ html, body {
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
-    font-weight: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
 }
 
 a {
