--- a/melon-head/src/App/AppNavigation/styles.module.scss
+++ b/melon-head/src/App/AppNavigation/styles.module.scss
@@ -14,7 +14,7 @@
     flex-direction: column;
     gap: 6px;
     margin-top: 64px;
-    padding: 12px 6px 12px 0;
+    padding: 12px 6px;
 }
 
 .nav-item {
