--- a/melon-head/src/App/Page/styles.module.scss
+++ b/melon-head/src/App/Page/styles.module.scss
@@ -7,12 +7,13 @@
     overflow: auto;
     max-width: 100%;
     background: var(--color2);
-    border-top-left-radius: 12px;
 }
 
 .title {
     display: flex;
     align-items: center;
+    flex-shrink: 0;
+    flex-grow: 0;
     gap: 6px;
     font-size: 24px;
     font-weight: 700;
