Miscellaneous fixes for recent features. (#124)
This packs several fixes and improvements into the UI and copy.

--- a/melon-head/src/Widgets/DataTable/styles.module.scss
+++ b/melon-head/src/Widgets/DataTable/styles.module.scss
@@ -63,3 +63,13 @@
     font-size: 16px;
     font-weight: 600;
 }
+
+.empty-container {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    letter-spacing: 0.4px;
+    flex-direction: column;
+}
