--- a/melon-head/src/App/Page/styles.module.scss
+++ b/melon-head/src/App/Page/styles.module.scss
@@ -1,6 +1,6 @@
 .root {
     flex: 100% 1 1;
-    padding: 32px 24px;
+    padding: 24px;
     display: flex;
     flex-direction: column;
     gap: 24px;
