--- a/melon-head/src/Widgets/Message/styles.module.scss
+++ b/melon-head/src/Widgets/Message/styles.module.scss
@@ -22,6 +22,12 @@
     li {
         padding: 2px 0;
     }
+
+    code {
+        background: var(--background-color);
+        padding: 0 2px;
+        letter-spacing: 0.05em;
+    }
 }
 
 .error {
