More UI improvements (#126)
Misc improvements to melon-head UI.

--- a/melon-head/src/App/AppHeader/styles.module.scss
+++ b/melon-head/src/App/AppHeader/styles.module.scss
@@ -49,7 +49,7 @@ $divider: 1px solid var(--separator-light-low-emphasis);
 
 .nav-btn-close {
     position: absolute;
-    left: 6px;
+    left: 0;
     border-right: 0;
 
     &:hover {
