--- a/melon-head/src/App/AppNavigation/styles.module.scss
+++ b/melon-head/src/App/AppNavigation/styles.module.scss
@@ -35,6 +35,7 @@
 
         &:hover {
             background: rgba(var(--rgb_color2), .1);
+            text-decoration: none;
         }
     }
 }
