--- a/melon-head/static/css/main.css
+++ b/melon-head/static/css/main.css
@@ -144,6 +144,10 @@ a {
     cursor: pointer;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 button, input {
     font-family: 'Merriweather Sans', Helvetica, Arial, sans-serif;
     color: inherit;
