--- a/melon-head/src/App/Page/styles.module.scss
+++ b/melon-head/src/App/Page/styles.module.scss
@@ -29,3 +29,20 @@
     align-items: center;
     justify-content: center;
 }
+
+.back-btn {
+    font-weight: 600;
+    padding: 2px 6px;
+    margin: 0 -6px;
+    align-self: flex-start;
+    border-radius: 3px;
+    transition: background 0.2s ease-in-out;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+        background: var(--background-color);
+        text-decoration: none;
+    }
+}
