Melon Head: Improvements in ApplicationDetail (#142)

--- a/melon-head/src/App/ApplicationDetail/styles.module.scss
+++ b/melon-head/src/App/ApplicationDetail/styles.module.scss
@@ -33,7 +33,8 @@
 
 .metadata {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1574px;
     gap: 12px;
 
     @media screen and (max-width: 900px) {
