--- a/melon-head/src/App/Members/styles.module.scss
+++ b/melon-head/src/App/Members/styles.module.scss
@@ -1,3 +1,9 @@
 .number-prefix {
     color: rgba(var(--rgb_color1), 0.7);
 }
+
+.members-tab {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
