--- a/melon-head/src/Widgets/DataGrid/styles.module.scss
+++ b/melon-head/src/Widgets/DataGrid/styles.module.scss
@@ -86,10 +86,11 @@
     right: 0;
     bottom: 0;
     left: 0;
+    padding: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--emphasis-dark-overlay);
+    background: var(--error-bgcolor);
     color: var(--error-color);
     font-size: 18px;
     font-weight: 600;
